--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -27,20 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: php
     steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          pattern: '*'
-          path: artifacts
-          merge-multiple: true
-
-      - name: Create artifacts zip for all zip files in artifacts folder
-        run: |
-          cd artifacts
-          zip -r ../artifacts.zip *
-
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact/merge@v4
         with:
-          name: artifacts.zip
-          path: artifacts.zip
+          name: artifacts
+          delete-merged: true
