--- a/php/action.yml
+++ b/php/action.yml
@@ -34,4 +34,5 @@ runs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
+        name: artifacts-${{inputs.php-version}}-${{inputs.arch}}-${{inputs.ts}}
         path: artifacts/*
