Add support for os version in the extension-matrix action

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -27,7 +27,7 @@ jobs:
 
   extension:
     needs: get-extension-matrix
-    runs-on: windows-2019
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix: ${{fromJson(needs.get-extension-matrix.outputs.matrix)}}
     steps:
