--- a/extension-matrix/action.yml
+++ b/extension-matrix/action.yml
@@ -22,6 +22,10 @@ inputs:
   ts-list:
     description: Thread safety to build
     required: false
+  allow-old-php-versions:
+    description: Allow old PHP versions
+    required: false
+    default: 'false'
 
 outputs:
   matrix:
@@ -45,3 +49,4 @@ runs:
         PHP_VERSION_LIST: ${{inputs.php-version-list}}
         ARCH_LIST: ${{inputs.arch-list}}
         TS_LIST: ${{inputs.ts-list}}
+        ALLOW_OLD_PHP_VERSIONS: ${{inputs.allow-old-php-versions}}
