Run all builds in extension workflow on failure

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -41,6 +41,7 @@ jobs:
     needs: get-extension-matrix
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix: ${{fromJson(needs.get-extension-matrix.outputs.matrix)}}
     steps:
       - name: Checkout
