Update dispatch workflow names
We add run-name property in the workflows to show the extension url and reference in the extensions workflow and PHP version in the php workflow.

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -1,4 +1,5 @@
 name: Build PHP Extension
+run-name: Build PHP Extension ${{ inputs.extension-url }}, ${{ inputs.extension-ref }}
 on:
   workflow_dispatch:
     inputs:
