--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -27,6 +27,10 @@ on:
         description: 'Naming schema for the artifacts, pie or pecl'
         required: false
         default: 'pie'
+      release-pecl:
+        description: 'Upload to PECL GitHub Release'
+        required: false
+        default: 'false'
 jobs:
   get-extension-matrix:
     runs-on: ubuntu-latest
@@ -76,3 +80,29 @@ jobs:
         with:
           name: artifacts
           delete-merged: true
+
+  pecl-release:
+      if: ${{ inputs.release-pecl }} == 'true'
+      runs-on: ubuntu-latest
+      needs: artifacts
+      steps:
+        - name: Get artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: artifacts
+            path: artifacts
+        - name: Release
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          run: |
+            ls -l artifacts
+            extension=$(basename "${{ inputs.extension-url }}")
+            mkdir -p /tmp/$extension/${{ inputs.extension-ref }}/
+            cp -a artifacts/* /tmp/$extension/${{ inputs.extension-ref }}/
+            cd /tmp || exit 1
+            zip -r $extension-${{ inputs.extension-ref }}.zip $extension
+            if ! gh release view pecl -R ${{ github.repository }}; then
+              gh release create pecl $extension-${{ inputs.extension-ref }}.zip -t pecl -n pecl -R ${{ github.repository }}
+            else
+              gh release upload pecl $extension-${{ inputs.extension-ref }}.zip -R ${{ github.repository }} --clobber
+            fi
