--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -23,6 +23,9 @@ on:
         description: 'Test runner to use'
         required: false
         default: 'run-tests.php'
+      build-directory:
+        description: 'Directory to build the extension in'
+        required: false
       artifact-naming-scheme:
         description: 'Naming schema for the artifacts, pie or pecl'
         required: false
@@ -68,6 +71,7 @@ jobs:
           ts: ${{ matrix.ts }}
           args: ${{ inputs.args }}
           libs: ${{ inputs.libs }}
+          build-directory: ${{ inputs.build-directory }}
           run-tests: ${{ inputs.run-tests }}
           test-runner: ${{ inputs.test-runner }}
 
