--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -9,6 +9,9 @@ on:
       extension-ref:
         description: 'Extension ref'
         required: true
+      php-version-list:
+        description: 'PHP versions to build'
+        required: false
       args:
         description: 'Configure arguments'
         required: false
@@ -48,6 +51,7 @@ jobs:
         with:
           extension-url: ${{ inputs.extension-url }}
           extension-ref: ${{ inputs.extension-ref }}
+          php-version-list: ${{ inputs.php-version-list }}
           arch-list: 'x64, x86'
           ts-list: 'nts, ts'
 
