--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         arch: [x64, x86]
         ts: [nts, ts]
-    runs-on: windows-2019
+    runs-on: ${{ startsWith(inputs.php-version, '8.4') && 'windows-2022' || 'windows-2019' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
