Improve manual workflows UX for dispatch

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -13,10 +13,14 @@ on:
         description: 'PHP versions to build'
         required: false
       arch-list:
+        type: choice
+        options: ['x64', 'x86', 'x64, x86']
         description: 'Architectures to build'
         required: false
         default: 'x64, x86'
       ts-list:
+        type: choice
+        options: ['nts', 'ts', 'nts, ts']
         description: 'Thread safety to build'
         required: false
         default: 'nts, ts'
@@ -27,6 +31,8 @@ on:
         description: 'Libraries'
         required: false
       run-tests:
+        type: choice
+        options: ['true', 'false']
         description: 'Run tests after building the extension'
         required: false
         default: 'false'
