--- a/.github/workflows/pecl.yml
+++ b/.github/workflows/pecl.yml
@@ -40,9 +40,6 @@ on:
         description: 'Test runner to use'
         required: false
         default: 'run-tests.php'
-      build-directory:
-        description: 'Directory to build the extension in'
-        required: false
 jobs:
   get-extension-matrix:
     runs-on: ubuntu-latest
@@ -80,9 +77,9 @@ jobs:
           ts: ${{ matrix.ts }}
           args: ${{ inputs.args }}
           libs: ${{ inputs.libs }}
-          build-directory: ${{ inputs.build-directory }}
           run-tests: ${{ inputs.run-tests }}
           test-runner: ${{ inputs.test-runner }}
+          build-directory: C:\build
         env:
           artifact-naming-scheme: pecl
 
