--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,6 +6,7 @@ on:
       php-version:
         description: 'PHP version to build'
         required: true
+
 jobs:
   php:
     strategy:
@@ -27,9 +28,22 @@ jobs:
   artifacts:
     runs-on: ubuntu-latest
     needs: php
+    outputs:
+      artifact-id: ${{ steps.artifacts.outputs.artifact-id }}
     steps:
       - name: Upload artifacts
         uses: actions/upload-artifact/merge@v4
+        id: artifacts
         with:
           name: artifacts
           delete-merged: true
+  upload:
+    runs-on: ubuntu-latest
+    needs: artifacts
+    steps:
+      - name: Upload to downloads server
+        run: |
+          url="https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ needs.artifacts.outputs.artifact-id }}/zip"
+          gh workflow run php.yml -R php/web-downloads -f url="$url"
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
