--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         arch: [x64, x86]
         ts: [nts, ts]
-    runs-on: ${{ (inputs.php-version > '8.4' || inputs.php-version=='master') && 'windows-2022' || 'windows-2019' }}
+    runs-on: windows-2022
     steps:
       - name: Checkout
         uses: actions/checkout@v4
