Fix step name in extension workflow

--- a/extension/action.yml
+++ b/extension/action.yml
@@ -58,7 +58,7 @@ runs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Build PHP
+    - name: Build PHP Extension
       id: build
       shell: pwsh
       env:
