Fix artifact setup in test job in php workflow

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,7 +38,7 @@ jobs:
       artifact-id: ${{ steps.artifacts.outputs.artifact-id }}
     steps:
       - name: Upload artifacts
-        uses: actions/upload-artifact/merge@v4
+        uses: actions/upload-artifact/merge@v5
         id: artifacts
         with:
           name: artifacts
@@ -68,6 +68,7 @@ jobs:
 
       - name: Test PHP
         shell: pwsh
+        continue-on-error: true
         run: |
           Import-Module (Join-Path $(pwd).Path '\php\BuildPhp') -Force          
           Invoke-PhpTests -PhpVersion ${{inputs.php-version}} `
@@ -76,7 +77,8 @@ jobs:
                           -Opcache ${{matrix.opcache}}
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v5
+        continue-on-error: true
         with:
           name: test-results-${{matrix.arch}}-${{matrix.ts}}-${{matrix.opcache}}
           path: test-${{matrix.arch}}-${{matrix.ts}}-${{matrix.opcache}}.xml
