--- a/.github/workflows/pecl.yml
+++ b/.github/workflows/pecl.yml
@@ -94,48 +94,54 @@ jobs:
           auto-detect-libs: true
           no-debug-symbols-ddtrace: true
 
-  artifacts:
+  artifact:
     runs-on: ubuntu-latest
     needs: extension
+    outputs:
+      artifact-id: ${{ steps.artifact.outputs.artifact-id }}
     steps:
-      - name: Upload artifacts
+      - name: Upload artifact
         uses: actions/upload-artifact/merge@v5
+        id: merge
         with:
-          name: artifacts
+          name: artifact
           delete-merged: true
 
-  pecl-release:
-    runs-on: ubuntu-latest
-    needs: artifacts
-    steps:
-      - name: Get artifact
+      - name: Get merged artifact
         uses: actions/download-artifact@v5
         with:
-          name: artifacts
-          path: artifacts
-      - name: Release
+          name: artifact
+          path: artifact
+
+      - name: Remove merged artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh api --method DELETE "repos/${{ github.repository }}/actions/artifacts/${{ steps.merge.outputs.artifact-id }}"
+
+      - name: Stage artifact for release
+        id: stage
         run: |
-          ls -l artifacts
           extension=$(basename "${{ inputs.extension-url }}" | tr '[:upper:]' '[:lower:]')
-          mkdir -p /tmp/$extension/${{ inputs.extension-ref }}/
-          cp -a artifacts/* /tmp/$extension/${{ inputs.extension-ref }}/
-          cd /tmp || exit 1
-          zip -r $extension-${{ inputs.extension-ref }}.zip $extension
-          if ! gh release view pecl -R ${{ github.repository }}; then
-            gh release create pecl $extension-${{ inputs.extension-ref }}.zip -t pecl -n pecl -R ${{ github.repository }}
-          else
-            gh release upload pecl $extension-${{ inputs.extension-ref }}.zip -R ${{ github.repository }} --clobber
-          fi
+          mkdir -p /tmp/$extension/$extension/${{ inputs.extension-ref }}/
+          cp -a artifact/* /tmp/$extension/$extension/${{ inputs.extension-ref }}/          
+          echo "artifact-name=$extension-${{ inputs.extension-ref }}" >> "$GITHUB_OUTPUT"
+          echo "artifact-path=/tmp/$extension" >> "$GITHUB_OUTPUT"
+
+      - name: Upload zip
+        uses: actions/upload-artifact@v5
+        id: artifact
+        with:
+          name: ${{ steps.stage.outputs.artifact-name }}
+          path: ${{ steps.stage.outputs.artifact-path }}
+
   upload:
     runs-on: ubuntu-latest
-    needs: pecl-release
+    needs: artifact
     steps:
       - name: Upload to downloads server
         run: |
           extension=$(basename "${{ inputs.extension-url }}")
-          url="https://github.com/${{ github.repository }}/releases/download/pecl/$extension-${{ inputs.extension-ref }}.zip"
+          url="https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ needs.artifact.outputs.artifact-id }}/zip"
           gh workflow run pecl.yml -R php/web-downloads -f url="$url" -f extension="$extension" -f ref="${{ inputs.extension-ref }}"
         env:
           GITHUB_TOKEN: ${{ secrets.WINDOWS_BUILDS_TOKEN }}
